feat: LogIn UI 구성 완료
-ghojeong/issue-tracker/#15

--- a/frontend/issue-cracker/public/index.html
+++ b/frontend/issue-cracker/public/index.html
@@ -8,6 +8,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&display=swap"
+      rel="stylesheet"
+    />
     <title>Issue Cracker</title>
   </head>
   <body>
